Fix errors on dev env guide
Issue-ID: AAI-2461
Signed-off-by: Jimmy Forsyth <jf2512@att.com>
Change-Id: Id548b843d29cd965741de2b387ae4e8d39e42691